tests/snapshots/run_wpt_conformance__coreml_where_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float32 3D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { tensor<bool, [...]> }; got tensor<uint8, [2, 3, 4]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputCondition: u8[2, 3, 4];
    inputFalseValue: f32[2, 3, 4];
    inputTrueValue: f32[2, 3, 4];
  }

  nodes {
    [whereOutput] = where(inputCondition, inputTrueValue, inputFalseValue, label="");
  }

  outputs { whereOutput; }
}
