tests/snapshots/run_wpt_conformance__coreml_where_float32_4D_tensors_only_broadcast_condition_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float32 4D tensors only broadcast condition 0D to 4D, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { tensor<bool, [...]> }; got tensor<uint8, [1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputCondition: u8[];
    inputFalseValue: f32[2, 2, 2, 3];
    inputTrueValue: f32[2, 2, 2, 3];
  }

  nodes {
    [whereOutput] = where(inputCondition, inputTrueValue, inputFalseValue, label="");
  }

  outputs { whereOutput; }
}
